Commit final tras corregir errores